--- a/internship logs/Apr22-27/Apr22-27_files/Apr22-27.qmd
+++ b/internship logs/Apr22-27/Apr22-27_files/Apr22-27.qmd
@@ -1,6 +1,13 @@
 ---
 title: "Internship logs from Apr.22 to Apr.27"
-format: html
+author:   
+  - Zhichuan MA 
+format: 
+ pdf:
+    toc: true
+    number-sections: true
+    colorlinks: true
+citation-package: biblatex
 ---
 This week's key point is to conclude the LCA methodology used in REHO.
 
@@ -11,11 +18,12 @@ Several questions to be answered:
 3. LCA level we would like to reach in REHO?
 4. Which technologies are pilots specific? Which ones are always the same whatever the geography?
 
-## 22/04/2024 - 24/04/2024
+# 22/04/2024 - 24/04/2024
 
 **Materials read**: Official website, ["Model" page](https://reho.readthedocs.io/en/main/sections/3_Model.html)
 
-**<span style="color: red;">For a delimited perimeter of buildings, REHO selects the optimal energy system configuration minimizing the specified objective function.</span>**
+\textbf{\textcolor{red}{For a delimited perimeter of buildings, REHO selects the optimal energy system configuration minimizing the specified objective function.}}
+
 
 Several energy demandes are considered:
 
@@ -28,15 +36,15 @@ Domestic electricity, DHW, and mobility needs are generated using standardized p
 
 **Question: Why is thermal comfort "modeled within the framework itself"?**
 
-![model](Apr22-27_files/diagram_model.svg)
+![model](Apr22-27_files/diagram_model.png)
 
-### model inputs
+## model inputs
 
  - EUDs, **End Use Demands**, from the meteorological data and the buildings characteristics
  - The **resources** to which it has access to provide those EUDs, namely grids
  - **the equipments** that can be used to convert those resources into the required services
 
-#### End use demand profiles
+### End use demand profiles
 
  - demand profile for domestic hot water
  - demand profile for domestic electricity
@@ -48,13 +56,13 @@ Domestic electricity, DHW, and mobility needs are generated using standardized p
 
 **Question: Where is mobility?**
 
-##### Building characteristics (usage type, morphology and heat performance)
+#### Building characteristics (usage type, morphology and heat performance)
 
-###### Usage
+##### Usage
 
 I to XII, diffferent room type and usage
 
-###### Morphology
+##### Morphology
 
  - Energy reference area (ERA) $A_{ERA}[m^{2}]$ 
  - Roof Surfaces $A_{roofs}[m^2]$
@@ -64,7 +72,7 @@ I to XII, diffferent room type and usage
 
 **Question: What is energy surface area?**
 
-###### Heating performance
+##### Heating performance
  - Year of construction or renovaion
  - Quality of thermal envelop
      - Overall heat transfer coefficient $U_{h}[kW/K/m^2]$
@@ -75,7 +83,7 @@ I to XII, diffferent room type and usage
 
 **Question: What means supply temperature and what means return temperature?**
 
-##### Weather data
+#### Weather data
 
  - Outdoor ambient temperature (yearly profile) $T_{out}[^{\circ}C]$
  - Global horizontal irradiation (yearly profile) $Irr_{out}[^{\circ}C]$
@@ -84,11 +92,11 @@ They use k-medoids clustering algorithm in REHO. (global irradiation and ambient
 
 **NB: Extreme periods are also considered, but only for the design of the capacities.**
 
-#### Grids
+### Grids
 
 In the REHO model, a grid is characterized by the energy carrier its transports and its specifications.
 
-##### Energy layers
+#### Energy layers
 
  - Electricity
  - Natural gas
@@ -104,16 +112,16 @@ These layers are modeled through parameters that can be changed in the model:
  - carbon content
  - Environmental impact
 
- <span style="color: red;">They only have 3 criterias for LCA:</span>
+ \textcolor{red}{They only have 3 criteria for LCA:}
  - Land use
  - Human toxicity
  - Water pollutants
 
-##### Specifications
+#### Specifications
 
 Cost, environmental impact, maximal capacity for district imports and exports
 
-#### Equipments
+### Equipments
 
 The units are parametrized by:
 
@@ -124,7 +132,7 @@ The units are parametrized by:
 ![Building level overview](Apr22-27_files/building_level.png)
 ![District level overview](Apr22-27_files/district_level.png)
 
-### Model
+## Model
 
 As objectives can be generally competing, the problem can be approached using a Multi-Objective Optimization (MOO) approach. MOO is implemented using the $\epsilon$ -constraint method to generate Pareto curves.
 
@@ -136,9 +144,9 @@ For the details, see the website. (There are some mistakes but still understanda
  - what is l? layers or linearization time?
  - what is b? what means bare module?
 
-#### Objective function
+### Objective function
 
-##### Annual operating expenses
+#### Annual operating expenses
 
 energy import tariff - energy output tarrif during one year
 
@@ -148,7 +156,7 @@ when "gr" and "-" together means the electricity to the grid
 
 **This is wrong:** Resource -[supply]-> grid -[demand]-> residence
 
-##### Annual capital expenses
+#### Annual capital expenses
 
 capital cost = invest + replacement
 
@@ -156,11 +164,11 @@ invest = bare module * (fixed investment cost * use or not decision variable + c
 
 replacement = similar to invest
 
-##### Annual total expenses
+#### Annual total expenses
 
 total = capital + operation
 
-##### Global warming potential
+#### Global warming potential
 
 bes = building energy system
 
@@ -168,25 +176,25 @@ $gwp_{op}$ = import tarrif - output tarrif
 
 $gwp_{bes}$ = bare module * (fixed gwp * use or not decision variable + continuous gwp * size)
 
-#### Building level constraints
+### Building level constraints
 
-##### Sizing constraints
+#### Sizing constraints
 
 size f is limitted to a feasible range.
 
-##### Energy balance
+#### Energy balance
 
 energy obtained from the renewable resources + energy from the grid = energy to the grid + energy consumed by units + energy consumed by buildings
 
 Fresh water or natural gas supply = its demand
 
-##### Heat casade
+#### Heat casade
 
 the change of residual heat = heating - cooling
 
 boundary condition
 
-##### Thermal comfort
+#### Thermal comfort
 
 Space heating = heat gained - heat exchange from internal to external - stored heat change with time
 
@@ -200,21 +208,25 @@ heat obtained from irradiation is easy to handle with
 
 There will also be a comfort penalty cost in objective function in objective function.
 
-##### Domestic hot water
+#### Domestic hot water
 
-##### Domestic electricity
+#### Domestic electricity
 
-#### District-level constraints
+### District-level constraints
 
 Dantzig-Wolfe algorithm
 
 I spent some time on this algorithm. Basically it decomposed this question to sub problems according to buildings. It will solve the problem iteratively until it is convergent.
 
-#### Grid Capacity
+Original metrics => master problem + sub problems 
+
+sub problems will return information (base variables and corresbonding conlumns) to the master problem and master problem will update its information (objective function, constraints matrics and bases) and solve to get the dual variables. Dual variables will be given to the sub problems again to update their objective functions.
+
+### Grid Capacity
 
 energy from grid to buildings - energy from buildings to grid = energy from outside
 
-### Outputs
+## Outputs
 
 Decision variables:
 
@@ -222,9 +234,9 @@ Installed capacities for building-level and district-level units
 
 Operation time throughout a year
 
-### Conclusion
+## Conclusion
 
-#### Relevance between LCA and cost
+### Relevance between LCA and cost
   
 In the REHO framework, LCA indicators are treated similarly to cost calculations. Although the analogy may not seem obvious from the formulas related to life cycle assessment, I will clarify the similarities with a simple example.
 
@@ -236,7 +248,7 @@ For energy, the cost is calculated as the price paid for electricity purchased f
 
 Regarding the units, costs are calculated by summing the fixed costs and the variable costs, which depend on the unit size. Similarly, CO2 emissions are calculated as the sum of the fixed carbon investment plus the variable carbon emissions based on unit size.
 
-#### What should I focus on in the scripts reading?
+### What should I focus on in the scripts reading?
 
 1. what they use as the fixed environmental impact and continuous environmental impact?
 2. According to the reading, they didnt achieve the MOO. (The GWP objective function is isolated with the annual total expenses)
@@ -245,8 +257,94 @@ Regarding the units, costs are calculated by summing the fixed costs and the var
      -  Based on previous studies, there is a noticeable scale effect in the manufacturing of these units, indicating that the relationship between the size of the units and their environmental and cost impacts is not linear. This complexity needs to be accurately modeled in the LCA.
      - While the cost analysis includes a provision for "replacement cost," the environmental impact assessments fail to include a corresponding environmental cost for replacement activities. This omission could lead to an underestimation of the environmental impacts over the lifecycle of the units.
 
-## 25/04/2024 - 26/04/2024
+# 25/04/2024 - 26/04/2024
 
-### Scripts reading
+## Scripts reading
+
+**Combine the "package structure" in the official website**
 
 **Objective for scripts reading**: Read the results filefolders and understand each function and parameter in these functions. Learn how to use these scripts.
+
+Indeed, based on the diagram, we have been able to see what are the model's inputs and outputs, as well as its algorithm.
+
+### data/
+
+#### elcom/
+
+id + commune + operator
+
+#### emissions/
+
+**Question: what are the meaning of the columns? And I also would like to know the source of these datas. Since they are different from what I see in the ecoinvent.**
+
+#### infrastructure/
+
+This filefolder contains a lot of information related to units. Nevertheless, 
+
+ - in building_units.csv and district_units.csv, for the LCA part, they have 13 kinds of LCA indicators and for each indicator they use "xxx_1" & "xxx_2". I guess it means the "fixed environmental impacts" and "continuous environmental impacts".
+ - in grids.csv, the demand cost for environmental impacts are nearly 0 compared to the supply cost.
+ - HP_parameters.txt is super confusing for the 1st column and 2nd column.
+ - storage_units.csv: everything related to lifecycle impacts is 0
+
+**Question: Same with last question**
+
+#### QBbuildings/
+
+Tried to log in but failed.
+
+![failure](Apr22-27_files/database.png)
+
+#### SIA/
+
+There are 2 csv files inside: 1 for properties for different types of rooms; 1 for the rooms compositions for different buildings. Everything is in French.
+
+#### skydome/
+
+irradiation data is based on the data in 2005.
+
+#### weather/
+
+datasets for weather.
+
+### model/
+```{matlab}
+param penalty_ratio default 1e-6;
+var penalties default 0;
+
+subject to penalties_contraints:
+penalties = penalty_ratio * (Costs_inv + Costs_op + sum{k in Lca_kpi} lca_tot[k] +
+            sum{l in ResourceBalances,p in PeriodExtrem,t in Time[p]} (Network_supply[l,p,t] + Network_demand[l,p,t])) + Costs_cft;
+
+# objective functions
+minimize TOTEX:
+Costs_tot + Costs_grid_connection + penalties;
+
+minimize OPEX:
+Costs_op + Costs_grid_connection + penalties;
+
+minimize CAPEX: # the second term is added to correspond to objective set in design_cst
+Costs_inv + penalties;
+
+minimize GWP:
+GWP_tot + penalties;
+
+minimize Human_toxicity:
+lca_tot["Human_toxicity"] + penalties;
+
+minimize land_use:
+lca_tot["land_use"] + penalties;
+
+```
+
+ - In the objective functions, we choose a objective to optimize. It's not like we optimize every objective together.
+ - Indeed the "+penalties" means the integration of LCA with the cost but for now the penalties are almost 0.
+ - Cost_cft is the comfort penalties.
+
+![difference between districts and buildings](Apr22-27_files/difference%20between%20district%20and%20building.png)
+
+input:
+ - scenario:
+     - objective (opex, capex, totex, ...), with 2 objectives, you will draw a Pareto curve(indeed I am not sure if it's pareto curve. There will be some things more like a sankey or ba)
+     - 
+
+To be continued
